[package]
name = "drift-gateway"
version = "1.5.2"
edition = "2021"

[dependencies]
actix-web = "*"
argh = "*"
drift-rs = { git = "https://github.com/drift-labs/drift-rs", rev = "6d2d6e0" }
env_logger = "*"
futures-util = "*"
log = "*"
rust_decimal = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
solana-account-decoder-client-types = "2.2.2"
solana-rpc-client-api = "2"
solana-sdk = "2"
solana-transaction-status = "2"
thiserror = "*"
tokio = "*"
tokio-tungstenite = "*"

[profile.release]
panic = 'abort'
