[package]
name = "drift-gateway"
version = "1.5.4"
edition = "2021"

[dependencies]
actix-web = "*"
argh = "*"
drift-rs = { git = "https://github.com/drift-labs/drift-rs", rev = "ab3fec7", features = ["titan"] }
base64 = "0.22.1"
env_logger = "*"
faster-hex = "0.10.0"
futures-util = "*"
log = "*"
nanoid = "0.4.0"
reqwest = { version = "*", features = ["json"] }
rust_decimal = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha256 = "1.6.0"
solana-account-decoder-client-types = "2"
solana-rpc-client-api = "2"
solana-sdk = "2"
solana-transaction-status = "2"
thiserror = "*"
tokio = {version ="*", features = ["full"]}
tokio-tungstenite = "*"

[profile.release]
panic = 'abort'
